# platform-maker

./: .gitignore  ACCOUNT_SYSTEM.md  CMakeLists.txt  accounts.json  compile.bat  compile.sh  run.bat  run.sh  stress_test.bat
client/: CMakeLists.txt
client/resources/Actors/enemies/koopa/: config.json
client/resources/Actors/player/luigi/big/: config.json
client/resources/Actors/player/luigi/small/: config.json
client/resources/Actors/powerup/mushroom/: config.json
client/resources/tools/: cut_frames_from_gif.py  cut_tileset.py
client/src/: client_app.cpp  client_app.hpp  main.cpp  net_client.cpp  net_client.hpp  sprite_config.cpp  sprite_config.hpp  tile_layer.cpp  tile_layer.hpp
client/src/game/: actor_manager.cpp  actor_manager.hpp  game_session.hpp  level_editor.hpp  network_session.cpp  network_session.hpp
client/src/net/: message_router.cpp  message_router.hpp  socket_compat.hpp
client/src/render/: asset_registry.cpp  asset_registry.hpp  hud.cpp  hud.hpp  render_context.cpp  render_context.hpp  sprite.cpp  sprite.hpp  texture.hpp  texture_loader.cpp  texture_loader.hpp  theme.cpp  theme.hpp  ui_anim.hpp  ui_widgets.cpp  ui_widgets.hpp
client/src/screens/: level_creator_screen.cpp  level_creator_screen.hpp  level_picker_screen.cpp  level_picker_screen.hpp  lobby_browser_screen.cpp  lobby_browser_screen.hpp  login_screen.cpp  login_screen.hpp  main_menu_screen.cpp  main_menu_screen.hpp  online_level_select_screen.cpp  online_level_select_screen.hpp  playing_screen.cpp  playing_screen.hpp  screen.hpp  screen_stack.hpp
engine/: CMakeLists.txt
engine/include/opm/: assets.hpp  engine.hpp  level.hpp  level_json.hpp  protocol.hpp  tile_metadata.hpp
engine/src/: assets.cpp  engine.cpp  engine_determinism_test.cpp  level.cpp  level_json.cpp  protocol.cpp  protocol_test.cpp  tile_metadata.cpp
levels/: layered_test.json  my_level33.json  test_level.json  test_room.json
server/: CMakeLists.txt
server/src/: main.cpp  server.cpp  server.hpp  server_app.cpp  server_app.hpp
server/src/game/: account_manager.cpp  account_manager.hpp  level_storage.cpp  level_storage.hpp  lobby.cpp  lobby.hpp  lobby_manager.cpp  lobby_manager.hpp  peer_session.hpp
server/src/net/: client_connection.cpp  client_connection.hpp  connection_table.hpp  scoped_socket.hpp  sender.cpp  sender.hpp  socket_compat.hpp  wire.cpp  wire.hpp
server/src/runtime/: scoped_timer_resolution.cpp  scoped_timer_resolution.hpp  scoped_wsa.hpp  tick_pacer.cpp  tick_pacer.hpp
